processor/src/test/resources/model/good/SimpleGenericStringModel.java
package io.logansquarex.processor;

import io.logansquarex.core.annotation.JsonObject;

@JsonObject
public class SimpleGenericStringModel extends SimpleGenericModel<String> {

}
